# Supakeeper

./: .gitignore  Dockerfile  README.md  README_ZH.md  docker-compose.yml  env.example  main.py  pyproject.toml  requirements.txt
.github/workflows/: supakeeper.yml
src/supakeeper/: __init__.py  cli.py  config.py  keeper.py  logger.py  notifier.py  scheduler.py
tests/: __init__.py  test_config.py  test_keeper.py
